--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "webpack": "^5.99.8",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
+  },
+  "scripts": {
+    "start": "webpack serve --open",
+    "build": "webpack"
   }
 }
